--- a/client/app/home/home.scss
+++ b/client/app/home/home.scss
@@ -1,3 +1,23 @@
 .main-title {
   text-align: center;
 }
+
+.sub-title {
+  text-align: left;
+}
+
+form {
+  align: center;
+  margin: 0 auto; 
+  width: 480px;
+  padding-top: 20px;
+}
+
+input {
+  width: 400px;
+  height: 30px;
+}
+
+button {
+  height: 30px;
+}
