--- a/client/app/home/home.scss
+++ b/client/app/home/home.scss
@@ -30,6 +30,10 @@ button {
   background-color: green;
 }
 
+label {
+  padding: 20px;
+}
+
 .mark-it:hover .fa-square-o,
 .mark-it .fa-check-square-o {
   display: none;
